--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* PAGE LAYOUT */
 *{
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -5,6 +6,9 @@
     box-sizing: border-box;
     background-color: rgb(246, 248,249);
 }
+/* /PAGE LAYOUT */
+/* _________________________________________________________________________________________________________________________________ */
+/* HEADER LAYOUT */
 .header_container{
     font-size: 2em;
     padding: 1em;
@@ -18,10 +22,22 @@
     display: inline-block;
     vertical-align:middle;
 }
+/* /HEADER LAYOUT */
+/* _________________________________________________________________________________________________________________________________ */
+/* MAIN LAYOUT */
+main{
+    margin: 5em 1em;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1300px;
+}
+/* /MAIN LAYOUT */
+/* _________________________________________________________________________________________________________________________________ */
+/* COMMON LAYOUT */
 .white_background{
     background-color: white;
 }
-
+/* /COMMON LAYOUT */
 
 
 
