--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* PAGE LAYOUT */
-*{
+body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
     border: 0;
@@ -79,8 +79,9 @@
     height: 1.5em;
     vertical-align: middle;
     text-align: center;
-    border: 2px solid;
+    border: 1px solid;
     border-radius: 50%;
+    margin-right: 10px;
 }
 .not_ok{
     color: red;
