--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,19 @@ body{
 /* _________________________________________________________________________________________________________________________________ */
 /* MAIN LAYOUT */
 .container{
-    margin: 5em 1em;
     margin-left: auto;
     margin-right: auto;
     max-width: 1300px;
-    border-radius: 15px;
     padding: 1em 2em 2em 6em;
+}
+.top_half{
+    margin-top: 5em;
+    border-radius: 15px 15px 0 0;
+}
+.bottom_half{
+    margin-top: 2px;
+    margin-bottom: 1em;
+    border-radius: 0 0 15px 15px;
 }
 .list_container{
     padding: 40px 10px;
@@ -124,22 +131,3 @@ li{
     background-color: white;
 }
 /* /COMMON LAYOUT */
-
-
-
-
-
-
-
-
-
-/* CLASSI DEBUGGER */
-.pest{
-    border: solid 2px;
-}
-.red{
-    border-color: red;
-}
-.green{
-    border-color: green;
-}
