--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body{
     display: inline-block;
     font-size: 0.5em;
     padding: 0.5em;
+    vertical-align: middle;
     border-radius: 0.5em;
     color: white;
 }
